[package]

name = "tunnel"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]



[features]
default = []
mydht-impl = ["mydht-base"]

[dependencies]
log = "0.3.4"
rand = "0.3.11"
rustc-serialize = "0.3.16"
bincode = "0.5.0"

[dependencies.readwrite-comp]
path = "../readwrite-comp/"
#git = "https://github.com/cheme/readwrite-comp.git"

[dependencies.mydht-base]
path = "../mydht/mydht-base/"
#git = "https://github.com/cheme/mydht/mydht-base"
optional = true

[dev-dependencies.mydht-basetest]
path = "../mydht/mydht-basetest/"
#git = "https://github.com/cheme/mydht-basetest.git"

[dev-dependencies.mydht-base]
path = "../mydht/mydht-base/"
#git = "https://github.com/cheme/mydht/mydht-base"


