[package]

name = "tunnel"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]



[features]
default = []

[dependencies]
log = "~0.3.4"
rand = "~0.3.17"
bincode = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}
serde_derive = "~1.0.10"
[dependencies.readwrite-comp]
#path = "../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"

[dev-dependencies.mydht-basetest]
#path = "../mydht/mydht/mydht-basetest/"
git = "https://github.com/cheme/mydht.git"

[dev-dependencies.sized_windows_lim]
#path = "../mydht/mydht/mydht-basetest/"
git = "https://github.com/cheme/readwrite-comp.git"


[dev-dependencies.mydht-base]
#path = "../mydht/mydht/mydht-base/"
git = "https://github.com/cheme/mydht.git"


